# openclaw-benchmark

./: .gitignore  BENCHMARKS.md  CLAUDE.md  QUICKSTART.md  README.md  SETUP.md  analyze_sweep.py  benchmark_runner.py  cli.py  config.py  justfile  local_client.py  pyproject.toml  run.py  task_runner.py  telegram_client.py
benchmarks/: README.md  __init__.py  ai_agent.py  base.py  remote_workspace.py  scenario_factory.py  security.py
benchmarks/scenarios/: __init__.py  compound_scenario.py  file_scenario.py  github_scenario.py  gmail_scenario.py  summarize_scenario.py  weather_scenario.py  web_scenario.py
benchmarks/setup/: __init__.py  file_setup.py  github_setup.py  gmail_setup.py  web_setup.py
benchmarks/validators/: __init__.py  compound_validator.py  file_validator.py  web_validator.py
scripts/: analyze_logs.py
tasks/compound/aggregate-and-report/: instruction.md  task.toml
tasks/compound/fetch-and-compare/: instruction.md
tasks/compound/fetch-and-save/: instruction.md  task.toml
tasks/compound/file-and-web/: instruction.md  task.toml
tasks/compound/filter-and-save/: instruction.md  task.toml
tasks/compound/multi-file-merge/: instruction.md  task.toml
tasks/compound/summarize-and-count/: instruction.md  task.toml
tasks/compound/transform-and-report/: instruction.md  task.toml
tasks/compound/web-to-file/: instruction.md  task.toml
tasks/file/advanced-log-analysis/: task.toml
tasks/file/data-transformation/: task.toml
tasks/gog-gmail/: gog_helper.py
tests/: conftest.py  test_config.py  test_telegram_client.py
(+249 files in other folders)
